--- a/src/main/resources/templates/study2.html
+++ b/src/main/resources/templates/study2.html
@@ -9,7 +9,7 @@
 <div >
     <p style="background-color:#66CC99; color:#993300; height:30px; line-height:30px;">画面要求：</pstyle="background-color:#66CC99; color:#993300; height:30px; line-height:30px;">
     <ol>
-        <li><a target="_blank">画面上要两个入力框（输入id，这个id用来指定修改哪条数据/输入年纪，）</a></li>
+        <li><a target="_blank">画面上要两个入力框</a></li>
          <li><a target="_blank">一个按钮（用于查询）</a></li>
        <li><a  target="_blank">一个表格（数据展示）</a></li>
         <li><a target="_blank">css：（样式不限）</a></li>
