新增增删改查接口
画面到后台到数据库 增删改查各写一个例子（数据库用新的表 代码里一个新的实体类）

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -10,6 +10,55 @@
 
 <body>
   <div>
+    <p>1.添加到数据库</p>
+    <label for="name">姓名：</label>
+    <input id="name" type="text" />
+    <br>
+    <br>
+    <label for="age">年龄：</label>
+    <select id="age">
+      <option value="20" check="checked">20</option>
+      <option value="25">25</option>
+      <option value="30">30</option>
+    </select>
+    <br>
+    <br>
+    <label for="">爱好：</label>
+    <p>
+      <input type="checkbox" name="interest" value="游戏" />游戏<br>
+      <input type="checkbox" name="interest" value="动漫" checked />动漫<br>
+      <input type="checkbox" name="interest" value="音乐" />音乐<br>
+      <input type="checkbox" name="interest" value="电影" />电影<br>
+      <input type="checkbox" name="interest" value="爬山" />爬山<br>
+    </p>
+    <input id="submitBtn" type="submit" value="提交" />
+    <br>
+    <br>
+    <p>2.通过id删除数据</p>
+    <label for="idDel">ID：</label>
+    <input id="idDel" type="text" />
+    <input id="idDelBtn" type="submit" value="删除" />
+    <br>
+    <br>
+    <p>3.通过id修改姓名</p>
+    <label for="idUpdate">ID：</label>
+    <input id="idUpdate" type="text" />
+    <br>
+    <label for="nameUpdate">姓名：</label>
+    <input id="nameUpdate" type="text" />
+    <input id="nameUpdateBtn" type="submit" value="修改" />
+    <br>
+    <br>
+    <p>4.通过name查询数据</p>
+    <label for="nameSelect">姓名：</label>
+    <input id="nameSelect" type="text" />
+    <input id="nameSelectBtn" type="submit" value="查找" />
+    <br>
+    <br>
+    <hr>
+
+
+
     <p>1.input文本提交</p>
     <input id="input1" type="text" />
     <input id="submit1" type="submit" value="提交" />
